Fixes DateRange jumping on date select bug
Due to the addition of the `DD-MM-YYYY` placeholders in the trigger the button jumps (again) on Date select. Fixed this by increasing width.

See https://github.com/Automattic/wp-calypso/pull/29938#issuecomment-455540980

--- a/client/components/date-range/style.scss
+++ b/client/components/date-range/style.scss
@@ -33,7 +33,10 @@
 }
 
 .date-range__trigger-btn-text {
-	min-width: 13.5em; // required to avoid content "jumping" as date text changes see https://github.com/Automattic/wp-calypso/pull/29938
+	// required to avoid content "jumping" as date text changes see:
+	// https://github.com/Automattic/wp-calypso/pull/29938
+	// https://github.com/Automattic/wp-calypso/pull/29938#pullrequestreview-194065929
+	min-width: 15em; 
     display: inline-block;
 }
 
